[Angel] Handle get cards remind
