# src/controllers/trello.controller.ts
@@ -1,7 +1,7 @@
 import { Get, Route, Controller, Post, Body } from 'tsoa';
 import { User } from './../entify/user.entity';
 
-import { getUsers, getBoard } from '../repositories/trello.repository';
+import { getUsers, getBoard, getCardRemind } from '../repositories/trello.repository';
 import { CreateUserRequest } from '../dto/trello/create-user-trello.dto';
 
 @Route('trello')
@@ -9,6 +9,11 @@ export default class TrelloController extends Controller {
   @Get('/')
   public async getBoard(): Promise<any> {
     return getBoard();
+  }
+
+  @Get('/card-remind')
+  public async getCardRemind(): Promise<any> {
+    return getCardRemind();
   }
 
   @Get('/user')
